JumpScript/tests/baselines/reference/undefinedSymbolReferencedInArrayLiteral1.errors.txt
tests/cases/compiler/undefinedSymbolReferencedInArrayLiteral1.jump(1,29): error TS2304: Cannot find name 'deltaOffset'.
tests/cases/compiler/undefinedSymbolReferencedInArrayLiteral1.jump(4,15): error TS2339: Property 'NonexistantMethod' does not exist on type 'number[]'.
tests/cases/compiler/undefinedSymbolReferencedInArrayLiteral1.jump(5,5): error TS2304: Cannot find name 'anotherNonExistingMethod'.


==== tests/cases/compiler/undefinedSymbolReferencedInArrayLiteral1.jump (3 errors) ====
    var tokens = [{ startIndex: deltaOffset }];
                                ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'deltaOffset'.
    
    var functions = [function() {
        [1, 2, 3].NonexistantMethod();
                  ~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'NonexistantMethod' does not exist on type 'number[]'.
        anotherNonExistingMethod();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'anotherNonExistingMethod'.
    }];
    
    